remove copyOf methods